# miri-bazel-example

./: .bazelrc  .gitignore  Cargo.toml  LICENSE  MODULE.bazel  README.md
crates/app/: BUILD.bazel  Cargo.toml
crates/app/src/: main.rs
crates/core/: BUILD.bazel
crates/core/src/: lib.rs
crates/utils/: BUILD.bazel  Cargo.toml
crates/utils/src/: lib.rs
miri/: BUILD.bazel  BUILD.miri.bazel  defs.bzl  extensions.bzl  miri.bzl  miri_sysroot.bzl  repositories.bzl  setup_cargo_workspace.sh  transition.bzl
